[tool.poetry]
name = "MicroMasters"
version = "0.69.1"
description = "MicroMasters"
license = "BSD-3"
readme = "README.md"
packages = []
authors  = ["MIT ODL"]

[tool.poetry.dependencies]
python = "3.9.17"
Django = "2.2.28"
Pillow ="8.3.2"
boto3 = "1.16.63"
celery = "5.2.2"
certifi = "2018.1.18"
dj-database-url= "0.3.0"
dj-static = "0.0.6"
django-cors-headers = "2.1.0"
django-compat = "1.0.15"
django-hijack = "2.1.10"
django-hijack-admin = "2.1.10"
django-ipware = "3.0.0"
django-redis = "5.2.0"
django-robots = "4.0.0"
django-role-permissions = "2.2.0"
django-server-status = "0.7.3"
django-storages = "1.9.1"
django-webpack-loader = "0.5.0"
djangorestframework = "3.11.2"
edx-api-client = "1.2.0"
edx-opaque-keys = "0.4"
opensearch-py = "1.0.0"
opensearch-dsl = "1.0.0"

faker = "0.9.1"
html5lib = "0.999999999"
l18n = "2021.3"
ipython = "8.10.0"
jsonfield = "2.0.2"
jsonpatch = "1.16"
newrelic = "6.0.1.155"
open-discussions-client = "0.5.0"
phonenumbers = "8.10.23"
psycopg2 = "2.8.6"
pycountry = "16.11.27.1"
python-dateutil = "2.5.3"
sentry-sdk = "1.1.0"
redis = "3.5.3"
requests = "2.25.1"
setuptools = "67.6.1"
six = "1.14.0"
social-auth-app-django = "3.1.0"
robohash = "1.0"
static3 = "0.5.1"
urllib3 = "1.26.5"
uwsgi = "2.0.18"
wagtail = "2.12.5"
flaky = "3.7.0"
pyOpenSSL = "^23.1.1"
social-auth-core = "3.4.0"
factory-boy = "^2.8.1"

[tool.poetry.group.dev.dependencies]

astroid= "2.4.2"
bpython = "^0.24"
ddt = "^1.6.0"
django-debug-toolbar = "^3.2.4"
ipdb = "^0.13.13"
nplusone = "^0.8.1"
pdbpp = "^0.10.3"
pip-tools = "^7.1.0"
pylint = "^2.6.0"
pylint-django = "^2.4.4"
pylint-plugin-utils= "^0.6"
pytest = "5.3.5"
pytest-cov = "^4.1.0"
pytest-django = "^3.8.0"
pytest-mock = "^3.11.1"
semantic-version = "^2.10.0"
selenium= "3.141.0"
testfixtures = "7.1.0"
tox = "3.28.0"
isort= "4.3.21"