[project]
name = "micromasters"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2,<5.3",
    "pillow>=10.0",
    "boto3==1.16.63",
    "celery==5.2.2",
    "certifi>=2021.10.8",
    "dj-database-url==0.3.0",
    "django-cors-headers>=4.0",
    "django-hijack>=3.3,<4.0",
    "django-ipware>=5.0",
    "django-redis==5.2.0",
    "django-robots>=5.0",
    "django-role-permissions==2.2.1",
    "django-server-status==0.7.3",
    "django-storages>=1.13",
    "django-webpack-loader==1.7.0",
    "djangorestframework>=3.14",
    "edx-api-client==1.2.0",
    "edx-opaque-keys==0.4",
    "opensearch-py==1.0.0",
    "opensearch-dsl==1.0.0",
    "factory-boy==2.8.1",
    "faker",
    "html5lib>=1.1",
    "l18n==2021.3",
    "ipython",
    "jsonfield>=3.1.0",
    "jsonpatch==1.16",
    "pyjwt==2.8.0",
    "phonenumbers>=8.12.0",
    "psycopg2>=2.9",
    "pycountry",
    "python-dateutil>=2.8.2",
    "sentry-sdk==1.1.0",
    "redis>=4.0",
    "requests>=2.20.0",
    "setuptools>=67.6.1,<80",
    "six>=1.11.0",
    "robohash==2.0.0",
    "tornado>=6.0",
    "urllib3==1.26.5",
    "uwsgi",
    "wagtail>=7.0,<8.0",
    "flaky==3.7.0",
    "pyopenssl",
    "social-auth-core>=4.0,<5.0",
    "social-auth-app-django>=5.0,<6.0",
    "django-taggit>=5.0",
    "django-filter>=23.0",
    "willow[heif]>=1.8",
    "sqlparse>=0.5",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "astroid>=3.0,<4.0",
    "ddt",
    "django-debug-toolbar",
    "ipdb",
    "nplusone>=0.8.1",
    "pylint>=3.0,<4.0",
    "pylint-django>=2.5,<3.0",
    "pylint-plugin-utils>=0.8",
    "pytest>=7.0,<8.0",
    "pytest-cov==2.11.1",
    "pytest-django==4.8.0",
    "pytest-mock==3.6.1",
    "selenium",
    "testfixtures",
    "isort",
    "semantic-version",
]
